fix Java 10 and 11 examples